--- a/vis_1.Rmd
+++ b/vis_1.Rmd
@@ -6,3 +6,39 @@ output: github_document
 ```{r setup, include=FALSE}
 library(tidyverse)
 ```
+
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USW00022534", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2021-01-01",
+    date_max = "2022-12-31") |>
+  mutate(
+    name = case_match(
+      id, 
+      "USW00094728" ~ "CentralPark_NY", 
+      "USW00022534" ~ "Molokai_HI",
+      "USS0023B17S" ~ "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) |>
+  select(name, id, everything())
+```
+
+
+Making our first plot.
+
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax)) +
+  geom_point()
+```
+
+
+```{r}
+weater_df |> 
+  ggplot(aes(x = tmin, y = tmax)) + 
+  geom_point()
+```
+
+
+
