--- a/vis_2.Rmd
+++ b/vis_2.Rmd
@@ -141,5 +141,23 @@ ggp_scatterplot +
   ggthemes::theme_excel() #does not look good
 ```
 
+Learning Assessment: Revisit the plot showing tmax against date for each location. Use labels, scale options, and theme changes to improve the readability of this plot
+
+New Scatterplot
+
+```{r}
+weather_df |> 
+  ggplot(aes(x = date, y = tmax, color = name, size = prcp)) +
+  geom_point(alpha = .3) +
+  geom_smooth(se = FALSE) +
+  viridis::scale_color_viridis(discrete = TRUE) +
+  labs(
+    x = "Date",
+    y = "Maximum Temp (C)",
+    title = "Seasonal variation in Max Temp"
+  ) +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
 
 
