bonus stuff, multiple panels

--- a/vis_2.Rmd
+++ b/vis_2.Rmd
@@ -156,8 +156,63 @@ weather_df |>
     y = "Maximum Temp (C)",
     title = "Seasonal variation in Max Temp"
   ) +
-  theme_classic() +
+  theme_minimal() +
   theme(legend.position = "bottom")
 ```
+
+
+
+Extra bonus stuff in `ggplot`
+
+Use different datasets in different `geom`s
+
+```{r}
+central_park_df = 
+  weather_df |> 
+  filter(name == "CentralPark_NY")
+
+molokai_df = 
+  weather_df |> 
+  filter(name == "Molokai_HI")
+
+molokai_df |> 
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point() + #scatterplot for molokai 
+  geom_line(data = central_park_df) #line plot for central park
+```
+
+
+
+## Multiple panels
+
+```{r}
+weather_df |> 
+  ggplot(aes(x = tmax, fill = name)) +
+  geom_density() +
+  facet_grid(. ~ name)
+```
+
+
+```{r}
+ggp_tmax_tmin = 
+  weather_df |> 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .3)
+
+ggp_tmax_density = 
+  weather_df |> 
+  ggplot(aes(x = tmax, fill = name)) +
+  geom_density(alpha = .3)
+
+ggp_tmax_date =
+  weather_df |> 
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point () +
+  geom_smooth(se = FALSE)
+
+(ggp_tmax_tmin + ggp_tmax_density) / ggp_tmax_date #using patchwork
+```
+
+
 
 
