--- a/vis_2.Rmd
+++ b/vis_2.Rmd
@@ -6,6 +6,7 @@ output: github_document
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(patchwork)
+library(haven)
 ```
 
 ```{r}
@@ -212,6 +213,42 @@ ggp_tmax_date =
 
 (ggp_tmax_tmin + ggp_tmax_density) / ggp_tmax_date #using patchwork
 ```
+
+
+## Data manipulation
+
+When you take a categorical variable and you put that into the columns, R has to know what to place first. R's default is by alphabetical order. You can control the order by using `mutate` to manipulate factor variable.
+
+```{r}
+weather_df |> 
+  mutate(name = fct_relevel(name, c("Molokai_HI", "CentralPark_NY", "Waterhole_WA"))) |>   #defining the order of plots by categorical variable
+  ggplot(aes(x = name, y = tmax, fill = name)) +
+  geom_violin()
+```
+
+
+
+PULSE data next.
+
+
+
+```{r}
+pulse_df = 
+  read_sas("data/public_pulse_data.sas7bdat") |> 
+  janitor::clean_names() |> 
+  pivot_longer(
+    cols = bdi_score_bl:bdi_score_12m,
+    names_to = "visit",
+    values_to = "bdi_score",
+    names_prefix = "bdi_score_"
+  ) |>  
+  mutate(visit = ifelse(visit == "bl", "00m", visit)) #changing bl to 00m
+
+pulse_df |> 
+  ggplot(aes(x = visit, y = bdi_score)) +
+  geom_boxplot()
+```
+
 
 
 
