--- a/eda.Rmd
+++ b/eda.Rmd
@@ -5,6 +5,7 @@ output: github_document
 
 ```{r setup, include=FALSE}
 library(tidyverse)
+library(haven) 
 ```
 
 Import weather data
@@ -257,4 +258,64 @@ weather_df |>
   ) #can see how much day to day variation do you see
 ```
 
+
+## Learning Assessment: 
+
+In the PULSE data, the primary outcome is BDI score; it’s observed over follow-up visits, and we might ask if the typical BDI score values are roughly similar at each. Try to write a code chunk that imports, cleans, and summarizes the PULSE data to examine the mean and median at each visit. Export the results of this in a reader-friendly format.
+
+## PULSE data
+
+```{r}
+pulse_df = 
+  read_sas("data/public_pulse_data.sas7bdat") |> 
+  janitor::clean_names() |>
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m, 
+    names_to = "visit",
+    values_to = "bdi_score",
+    names_prefix = "bdi_score_"
+  )
+
+pulse_df |> 
+  group_by(visit) |> 
+  summarize(
+    mean_bdi = mean(bdi_score, na.rm = TRUE),
+    median_bdi = median(bdi_score, na.rm = TRUE)
+  ) |> 
+  knitr::kable(digits = 1)
+```
+
+
+## FAS
+
+```{r}
+litters_df = 
+  read_csv("data/FAS_litters.csv", na = c("NA", ".", "")) |> 
+  janitor::clean_names() |> 
+  separate(
+    group, into = c("dose", "tx_day"), sep = 3
+  )
+
+pups_df = 
+  read_csv("data/FAS_pups.csv", na = c("NA", ".", "")) |> 
+  janitor::clean_names()
+
+fas_df = 
+  left_join(pups_df, litters_df, by = "litter_number")
+```
+
+
+Compute a table that we care about.
+
+```{r}
+fas_df |> 
+  drop_na(dose) |> #without the drop code, one row has NA in it, but sake of making it easy for the assessment, can just drop.
+  group_by(dose, tx_day) |> 
+  summarize(mean_pivot = mean(pd_pivot, na.rm = TRUE)) |> 
+  pivot_wider(  #make it into a presentable format
+    names_from = tx_day,
+    values_from = mean_pivot
+  ) |> 
+  knitr::kable(digits = 2)
+```
 
